# restful-web-service-demo

./: README.md  migrate.py  pyproject.toml
app/: crud.py  database.py  main.py  models.py  schemas.py
app/routers/: courses.py  students.py
