[tool.poetry]
name = "restful_web_services_demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.62.0"
uvicorn = "^0.12.3"
SQLAlchemy = "^1.3.20"
alembic = "^1.4.3"
email-validator = "^1.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
